# scitex-logging

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml
.github/ci/: build-in-sif.sh  publish-in-sif.sh  run-in-sif.sh
.github/workflows/: cla.yml  docs.yml  import-smoke-on-ubuntu-py3-12.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  pytest-matrix-on-ubuntu-py3-11-3-12-3-13.yml  rtd-sphinx-build-on-ubuntu-latest.yml  scitex-dev-quality-audit-on-ubuntu-latest.yml  test.yml
GITIGNORED/: REFACTORING.md
docs/sphinx/: conf.py  index.rst  installation.rst  quickstart.rst
examples/: quickstart.py
src/scitex_logging/: README.md  _Tee.py  __init__.py  _config.py  _context.py  _errors.py  _handlers.py  _warnings.py
src/scitex_logging/_skills/scitex-logging/: 01_installation.md  01_quick-start.md  02_python-api.md  (+6 more)
src/scitex_logging/_sphinx_html/: .buildinfo  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
src/scitex_logging/llm/: __init__.py  __main__.py  _actions.py  _dag.py  _dashboard.py  _parser.py  _renderer.py  _replay.py  _spa.py  _spa_css.py  _spa_js.py
tests/: conftest.py  test__context.py  test__formatters.py  test__logger.py  test__print_capture.py  test__warnings.py
tests/develop/: test_audit.py
tests/examples/: test_examples_smoke.py  test_quickstart.py
tests/integration/: test_cross_package_imports.py
tests/llm/: test__parser.py
tests/scitex_logging/: test__Tee.py  test__config.py  test__context.py  test__errors.py  test__formatters.py  test__handlers.py  test__levels.py  test__logger.py  test__print_capture.py  test__warnings.py
tests/scitex_logging/llm/: conftest.py  test___main__.py  test__actions.py  test__cli.py  test__dag.py  test__dashboard.py  test__main__.py  test__parser.py  test__renderer.py  test__replay.py  test__spa.py
(+14 files in other folders)
