[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-logging"
version = "0.1.2"
description = "Logging utilities for the SciTeX ecosystem"
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.10"
authors = [
    { name = "Yusuke Watanabe", email = "ywatanabe@scitex.ai" },
]
keywords = [
    "logging",
    "scitex",
    "scientific",
    "research",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Logging",
]
dependencies = []

[project.optional-dependencies]
# Bare install is the full package; [all] is provided for ecosystem-wide
# consistency so `pip install scitex-*[all]` works uniformly.
all = []

dev = ["pytest", "pytest-cov", "scitex-dev>=0.7.0"]

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-logging"
Repository = "https://github.com/ywatanabe1989/scitex-logging"
Issues = "https://github.com/ywatanabe1989/scitex-logging/issues"

[project.entry-points."scitex_dev.docs"]
scitex-logging = "scitex_logging"

[project.entry-points."scitex_dev.skills"]
scitex-logging = "scitex_logging"

[tool.hatch.build.targets.wheel]
packages = ["src/scitex_logging"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
